# robotic_digital_twin_simulation

./: .env.example  .gitignore  AUDIT_PROMPT_PHASE5.md  CLAUDE.md  CMakeLists.txt  CODEX_BRUTAL_AUDIT.md  CODEX_REAUDIT.md  CODEX_SESSION6_AUDIT.md  COLD_START_CLOSED.md  COLD_START_RCA_FINAL.md  COLD_START_TEST_REQUIREMENTS.md  EXECUTION_PLAN.md  GEMINI_FULL_AUDIT.md  GEMINI_REAUDIT.md  GEMINI_SESSION6_AUDIT.md  KIMI_FULL_AUDIT.md  KIMI_SESSION6_AUDIT.md  MASTER_PLAN.md  PHASE1_KIMI_AUDIT.md  PHASE2_KIMI_AUDIT.md  PHASE3_KIMI_AUDIT.md  PROJECT_PLAN.md  PROJECT_SUMMARY_1PAGE.md  ROADMAP.md  test_output.txt  test_output_phase5.txt  vcpkg.json
audit/: AUDIT_PROMPT_PHASE13_CODEX.md  AUDIT_PROMPT_PHASE13_GEMINI.md  AUDIT_PROMPT_PHASE13_KIMI.md
configs/: README.md
configs/behavior_trees/: addverb_dynamo.xml  addverb_quadron.xml  addverb_veloce.xml  default_agv.xml  default_amr.xml
configs/fleets/: addverb_mixed.json  default_mixed.json
configs/robots/: README.md  addverb_dynamo.yaml  addverb_quadron.yaml  addverb_veloce.yaml  amr500.yaml  differential_drive.yaml  unidirectional.yaml  zippy10.yaml
configs/warehouses/: README.md  addverb_noida.json  botvalley.json  realistic.json  simple_grid.json  template_large.json  template_medium.json  template_small.json  warehouse_distinct.json  warehouse_pharma.json
configs/wcs/: conveyor_layout.yaml
configs/wms/: sku_catalog.yaml
cpp/: CMakeLists.txt
cpp/include/rdt/: version.h
cpp/include/rdt/behavior/: ActionNodes.h  BTEngine.h  ConditionNodes.h
cpp/include/rdt/core/: Config.h  Logger.h  Timer.h  Types.h
cpp/include/rdt/fleet/: AgentInterface.h  COPPController.h  FleetManager.h  TaskManager.h
cpp/include/rdt/navigation/: AStar.h  GraphMap.h  NodeReservation.h  QuadTree.h
cpp/include/rdt/network/: ProtocolV1.h  RESTServer.h  TCPServer.h
cpp/include/rdt/robot/: BatteryModel.h  MotionController.h  ObstacleHandler.h  RobotState.h
cpp/src/apps/: fms_server.cpp
cpp/src/behavior/: ActionNodes.cpp  BTEngine.cpp  ConditionNodes.cpp
cpp/src/core/: Config.cpp  Logger.cpp  Timer.cpp
cpp/src/fleet/: AgentInterface.cpp  COPPController.cpp  FleetManager.cpp  TaskManager.cpp
cpp/src/navigation/: AStar.cpp  GraphMap.cpp  NodeReservation.cpp  QuadTree.cpp
cpp/src/network/: ProtocolV1.cpp  RESTServer.cpp  TCPServer.cpp
cpp/src/robot/: BatteryModel.cpp  MotionController.cpp  ObstacleHandler.cpp  RobotState.cpp
cpp/tests/: CMakeLists.txt  test_astar.cpp  test_battery.cpp  test_bt.cpp  test_config.cpp  test_fleet.cpp  test_graph.cpp  test_hello.cpp  test_logger.cpp  test_motion.cpp  test_obstacle.cpp  test_protocol.cpp  test_quadtree.cpp  test_reservation.cpp  test_rest.cpp  test_robot_state.cpp  test_tcp.cpp  test_timer.cpp  test_types.cpp
demo/: cold_start_demo.py  fleet_demo.py
docker/: .env.docker.example  Dockerfile  docker-compose.yml  start.sh
docker/mosquitto/: mosquitto.conf  passwd
docker/sros2/: README.md  policies.xml
docs/: ADDVERB_PRESETS.md  API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  GAP_ANALYSIS_HAIROBOTICS.md  GETTING_STARTED.md  MAPF_BLUEPRINT.md  USER_EXPERIENCE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
gazebo/: bottleneck_scenarios.py  cold_start_3d_lidar.py  cold_start_3d_results.json  cold_start_proven.py  cold_start_proven_results.json  cold_start_proven_results.md  cold_start_results.json  cold_start_sim.py  engine_comparison.py  fleet_intelligence_40.py  fleet_intelligence_40_real.py  full_flow_cold_start.py  full_flow_cold_start_v4.py  full_flow_results.json  launch.py  multi_robot_cold_start.py  multi_robot_final.py  ril_cold_start.py  ril_cold_start_results.json  scale_100_fast.py  scale_100_robots.py  spawn_fleet.py  stress_test_15robots.py
gazebo/benchmarks/: advanced_features.py  advanced_features_results.json  amcl_benchmark_results.json  amcl_vs_iogita.py
gazebo/plugins/: CMakeLists.txt  barcode_sensor.cpp  conveyor_belt.cpp  lidar_sensor.cpp
gazebo/scripts/: generate_fleet.py  generate_robot.py  generate_robot_sdf.py  generate_world.py
gazebo/tests/: test_robot_gen.py  test_world_gen.py
gazebo/validation_tests/: deployment_validation.py  deployment_validation_results.json
gazebo/worlds/: botvalley.sdf  gen_fleet_world.py  realistic_warehouse_150x200m.sdf  simple_5x5_grid.sdf  warehouse_distinct_fleet.sdf  warehouse_distinct_generator.py
iogita_coldstart_addverb/gazebo_demo/: demo_results.json  warehouse_distinct.sdf
project_29_full_robotics/robotic_digital_twin_simulation/: P29a_DELTA_BLUEPRINT_02-04-2026.md  PROJECT_29_COMPLETE_REFERENCE.md  Project_29_Warehouse_Robotic_Intelligence_Engine.md
python/: requirements.txt  test_output.txt
python/app/: auth.py  config.py  main.py  models.py  websocket.py
python/designer/: __init__.py  conveyor_designer.py  layout_generator.py
python/intelligence/: __init__.py
python/monitoring/: __init__.py  influx_writer.py  redis_cache.py
python/ros2_bridge/: __init__.py  bridge.py  hal.py  topic_mapper.py
python/tests/: conftest.py  test_3d_contracts.py  test_3d_perf.py  test_addverb_presets.py  test_addverb_presets_output.txt  test_api.py  test_cold_start_v4.py  test_cold_start_v4_output.txt  test_config.py  test_designer.py  test_designer_v2.py  test_designer_v2_api.py  test_health.py  test_heatmap.py  test_integration.py  test_inventory.py  test_inventory_api.py  test_iogita.py  test_iogita_accuracy.py  test_mapf.py  test_mixed_fleet.py  test_order_import.py  test_ros2_bridge.py  test_ros2_bridge_output.txt  test_scenarios.py  test_sg.py  test_vda5050.py  test_waves.py  test_wcs.py  test_wcs_api.py  test_wes.py  test_wms.py
python/vda5050/: __init__.py  gateway.py  models.py  mqtt_client.py  translator.py
python/wcs/: __init__.py  conveyor_controller.py  lane_manager.py  package_tracker.py  sorter_engine.py
scenarios/: SAFETY_CERTIFICATION_ROADMAP.md  test_dynamic_obstacles.py  test_real_amcl_benchmark.py  test_symmetry_breaker.py
scripts/: generate_realistic_warehouse.py
(+129 files in other folders)
